--- a/learn-m365-pr/m365/recover-from-ransomware-attacks/index.yml
+++ b/learn-m365-pr/m365/recover-from-ransomware-attacks/index.yml
@@ -3,14 +3,14 @@ uid: learn-m365.recover-from-ransomware-attacks
 metadata:
   moduleType: standard
   title: Recover from ransomware attacks
-  description: Any organization or individual runs the risk of a ransomware attack. As such, the ability to promptly spot and respond to an attack remains essential for successful recovery. In this module, you'll learn how to detect, and recover from, a ransomware attack.
+  description: Any organization or individual runs the risk of a ransomware attack. As such, the ability to promptly spot and respond to an attack remains essential for successful recovery. In this module, you'll learn how to detect, and recover from a ransomware attack.
   ms.date: 05/20/2022
   author: beccarobins
   ms.author: beccarobins
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Recover from ransomware attacks
-summary: Any organization or individual runs the risk of a ransomware attack. As such, the ability to promptly spot and respond to an attack remains essential for successful recovery. In this module, you'll learn how to detect, and recover from, a ransomware attack.
+summary: Any organization or individual runs the risk of a ransomware attack. As such, the ability to promptly spot and respond to an attack remains essential for successful recovery. In this module, you'll learn how to detect, and recover from a ransomware attack.
 abstract: |
   By the end of this module, you'll be able to:
     - Describe the different indicators of a ransomware attack.
