Apply suggestions from code review

--- a/learn-m365-pr/m365/recover-from-ransomware-attacks/describe-how-respond-ransomware-attack.yml
+++ b/learn-m365-pr/m365/recover-from-ransomware-attacks/describe-how-respond-ransomware-attack.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.recover-from-ransomware-attacks.describe-how-respond-ransomware-attack
+uid: learn-m365.ransomware-recover.describe-how-respond-ransomware-attack
 title: Describe how to respond to a ransomware attack
 metadata:
   unitType: learning-content
