--- a/learn-m365-pr/m365/recover-from-ransomware-attacks/detect-ransomware-attack.yml
+++ b/learn-m365-pr/m365/recover-from-ransomware-attacks/detect-ransomware-attack.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.recover-from-ransomware-attacks.detect-ransomware-attack
+uid: learn-m365.ransomware-recover.detect-ransomware-attack
 title: Detect a ransomware attack
 metadata:
   unitType: learning-content
