--- a/learn-m365-pr/m365/recover-from-ransomware-attacks/introduction.yml
+++ b/learn-m365-pr/m365/recover-from-ransomware-attacks/introduction.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.recover-from-ransomware-attacks.introduction
+uid: learn-m365.ransomware-recover.introduction
 title: Introduction
 metadata:
   unitType: introduction
