--- a/learn-m365-pr/m365/recover-from-ransomware-attacks/summary.yml
+++ b/learn-m365-pr/m365/recover-from-ransomware-attacks/summary.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.recover-from-ransomware-attacks.summary
+uid: learn-m365.ransomware-recover.summary
 title: Summary
 metadata:
   unitType: summary
