--- a/learn-m365-pr/m365/recover-from-ransomware-attacks/index.yml
+++ b/learn-m365-pr/m365/recover-from-ransomware-attacks/index.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Module
-uid: learn-m365.recover-from-ransomware-attacks
+uid: learn-m365.ransomware-recover
 metadata:
   moduleType: standard
   title: Recover from ransomware attacks
@@ -32,10 +32,10 @@ products:
 subjects:
 - cloud-computing
 units:
-- learn-m365.recover-from-ransomware-attacks.introduction
-- learn-m365.recover-from-ransomware-attacks.detect-ransomware-attack
-- learn-m365.recover-from-ransomware-attacks.describe-how-respond-ransomware-attack
-- learn-m365.recover-from-ransomware-attacks.knowledge-check
-- learn-m365.recover-from-ransomware-attacks.summary
+- learn-m365.ransomware-recover.introduction
+- learn-m365.ransomware-recover.detect-ransomware-attack
+- learn-m365.ransomware-recover.describe-how-respond-ransomware-attack
+- learn-m365.ransomware-recover.knowledge-check
+- learn-m365.ransomware-recover.summary
 badge:
-  uid: learn-m365.recover-from-ransomware-attacks.badge
+  uid: learn-m365.ransomware-recover.badge
