--- a/learn-m365-pr/m365/recover-from-ransomware-attacks/knowledge-check.yml
+++ b/learn-m365-pr/m365/recover-from-ransomware-attacks/knowledge-check.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.recover-from-ransomware-attacks.knowledge-check
+uid: learn-m365.ransomware-recover.knowledge-check
 title: Knowledge check
 metadata:
   unitType: knowledge_check
