Updates durations and folder name

--- a/learn-m365-pr/m365/ransomware-identify-entry-points/describe-threat-landscape.yml
+++ b/learn-m365-pr/m365/ransomware-identify-entry-points/describe-threat-landscape.yml
@@ -4,7 +4,7 @@ title: Describe the threat landscape
 metadata:
   unitType: learning-content
   title: Describe the threat landscape
-  description: "Learn about attack vectors and threat landscapes."
+  description: Learn about attack vectors and threat landscapes.
   ms.date: 5/9/2022
   author: beccarobins
   ms.author: beccarobins
