--- a/learn-m365-pr/m365/ransomware-identify-entry-points/introduction.yml
+++ b/learn-m365-pr/m365/ransomware-identify-entry-points/introduction.yml
@@ -4,7 +4,7 @@ title: Introduction
 metadata:
   unitType: introduction
   title: Introduction
-  description: "Learn about the threat landscape and how cybercriminals exploit weaknesses and vulnerabilities in your security infrastructure."
+  description: Learn about the threat landscape and how cybercriminals exploit weaknesses and vulnerabilities in your security infrastructure.
   ms.date: 5/9/2022
   author: beccarobins
   ms.author: beccarobins
