--- a/learn-m365-pr/m365/ransomware-identify-entry-points/knowledge-check.yml
+++ b/learn-m365-pr/m365/ransomware-identify-entry-points/knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   unitType: knowledge_check
   title: Knowledge check
-  description: "Check what you've learned."
+  description: Check what you've learned.
   ms.date: 5/9/2022
   author: beccarobins
   ms.author: beccarobins
