--- a/learn-m365-pr/m365/ransomware-identify-entry-points/ransomware-entry-points.yml
+++ b/learn-m365-pr/m365/ransomware-identify-entry-points/ransomware-entry-points.yml
@@ -4,12 +4,12 @@ title: Describe different ransomware entry points
 metadata:
   unitType: learning-content
   title: Describe different ransomware entry points
-  description: "Learn about different entry points used by cyberattack to breach your security defenses."
+  description: Learn about different entry points used by cyberattack to breach your security defenses.
   ms.date: 5/9/2022
   author: beccarobins
   ms.author: beccarobins
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-durationInMinutes: 4
+durationInMinutes: 3
 content: |
   [!include[](includes/ransomware-entry-points.md)]
