--- a/learn-m365-pr/m365/ransomware-identify-entry-points/summary.yml
+++ b/learn-m365-pr/m365/ransomware-identify-entry-points/summary.yml
@@ -4,7 +4,7 @@ title: Summary
 metadata:
   unitType: summary
   title: Summary
-  description: "Summarize what you have learned."
+  description: Summarize what you have learned.
   ms.date: 5/9/2022
   author: beccarobins
   ms.author: beccarobins
