--- a/learn-m365-pr/m365-developer/msteams-monetize-apps/3-why-transact-apps.yml
+++ b/learn-m365-pr/m365-developer/msteams-monetize-apps/3-why-transact-apps.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.msteams-sso.3-why-transact-apps
+uid: learn-m365.msteams-monetize-apps.3-why-transact-apps
 metadata:
   title: Why transact Microsoft Teams apps
   description: In this unit, you'll learn how you can get your apps into the hands of customers with the Microsoft Commercial Marketplace.
