--- a/learn-m365-pr/m365-developer/msteams-monetize-apps/6-summary.yml
+++ b/learn-m365-pr/m365-developer/msteams-monetize-apps/6-summary.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.msteams-sso.6-summary
+uid: learn-m365.msteams-monetize-apps.6-summary
 metadata:
   title: Summary
   description: This unit summarizes what you learned in this module.
