--- a/learn-m365-pr/m365-developer/msteams-monetize-apps/1-introduction.yml
+++ b/learn-m365-pr/m365-developer/msteams-monetize-apps/1-introduction.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.msteams-sso.1-introduction
+uid: learn-m365.msteams-monetize-apps.1-introduction
 metadata:
   title: Introduction
   description: This unit introduces you to the module and explains what you will learn.
