--- a/learn-m365-pr/m365-developer/msteams-monetize-apps/4-technical-requirements.yml
+++ b/learn-m365-pr/m365-developer/msteams-monetize-apps/4-technical-requirements.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.msteams-sso.4-technical-requirements
+uid: learn-m365.msteams-monetize-apps.4-technical-requirements
 metadata:
   title: Technical requirements
   description: In this unit, you'll learn what the technical requirements for creating a Microsoft Teams app you can monetize.
@@ -56,7 +56,7 @@ quiz:
     - content: "All the above"
       isCorrect: true
       explanation: "Correct!"
-  - choice: "Partners must create multiple offers for different SKUs they support for their transactable SaaS offer."
+  - content: "Partners must create multiple offers for different SKUs they support for their transactable SaaS offer."
     choices:
     - content: "False"
       isCorrect: true
