--- a/learn-m365-pr/m365-developer/msteams-monetize-apps/index.yml
+++ b/learn-m365-pr/m365-developer/msteams-monetize-apps/index.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Module
-uid: learn-m365.msteams-sso
+uid: learn-m365.msteams-monetize-apps
 metadata:
   title: Build and sell Microsoft Teams apps in Microsoft AppSource and the Microsoft Teams store
   description: In this module, you'll learn how to monetize your Microsoft Teams apps by selling them through Microsoft AppSource and the Microsoft Teams store.
