--- a/learn-m365-pr/wwl/manage-authentication-for-messaging/index.yml
+++ b/learn-m365-pr/wwl/manage-authentication-for-messaging/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.manage-authentication-for-messaging
 metadata:
   title: Manage authentication for messaging
   description: "Manage authentication for messaging"
-  ms.date: 05/24/2022
+  ms.date: 05/27/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -30,6 +30,11 @@ products:
 - office-365
 - office-exchange-server
 - office-exchange-online
+subjects:
+- communication
+- compliance
+- device-management
+- identity-access
 units:
 - learn.wwl.manage-authentication-for-messaging.introduction
 - learn.wwl.manage-authentication-for-messaging.examine-password-policy-options
