--- a/learn-m365-pr/paths/manage-your-microsoft-365-security-services/index.yml
+++ b/learn-m365-pr/paths/manage-your-microsoft-365-security-services/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.manage-your-microsoft-365-security-services
 metadata:
-  title: Manage your Microsoft 365 security services
-  description: Manage your Microsoft 365 security services
-  ms.date: 05/10/2021
+  title: Manage your security services in Microsoft 365 Defender
+  description: Manage your security services in Microsoft 365 Defender
+  ms.date: 05/27/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Manage your Microsoft 365 security services
+title: Manage your security services in Microsoft 365 Defender
 prerequisites: |
   - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
@@ -24,7 +24,6 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
@@ -34,6 +33,5 @@ modules:
 - learn.wwl.introduction-to-microsoft-defender-for-office-365
 - learn.wwl.manage-safe-attachments
 - learn.wwl.manage-safe-links
-- learn.wwl.explore-reporting-microsoft-365-security-services
 trophy:
   uid: learn.wwl.manage-your-microsoft-365-security-services.trophy
