--- a/learn-m365-pr/m365/viva-goals-okr-essentials/knowledge-check.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-essentials/knowledge-check.yml
@@ -52,7 +52,7 @@ quiz:
     - content: "Collaboration, Networking, Personal Success, Transparency, Purpose, Focus."
       isCorrect: false
       explanation: "That's incorrect. Remember that the Superpowers are related to a goal-setting system that empower the entire company."
-    - content: "Correct. Focus, Alignment, Tracking, Transparency, and Stretch."
+    - content: "Focus, Alignment, Tracking, Transparency, and Stretch."
       isCorrect: true
       explanation: "These five superpowers are what makes the OKR framework an effective system for achieving goals."
     - content: "Stretch, Scheduling, Intuition, Evolution, Adaptation, Alignment."
