--- a/learn-m365-pr/wwl/explore-retention-microsoft-365/index.yml
+++ b/learn-m365-pr/wwl/explore-retention-microsoft-365/index.yml
@@ -3,21 +3,21 @@ uid: learn.wwl.explore-retention-microsoft-365
 metadata:
   title: Explore retention in Microsoft 365
   description: "Explore retention in Microsoft 365"
-  ms.date: 06/10/2021
+  ms.date: 05/31/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Explore retention in Microsoft 365
-summary: This module examines how data can be retained and ultimately removed in Microsoft 365 by using data retention policies in the Security &amp; Compliance Center and Messaging Records Management in Exchange.
+summary: This module examines how data can be retained and ultimately removed in Microsoft 365 by using data retention policies and data retention labels in retention policies.
 abstract: |
   By the end of this module, you will be able to:
-  - Explain how a retention policy works
-  - Compare Message Records Management in Exchange and retention policies in the Security &amp; Compliance Center
-  - Understand how Message Records Management works in Exchange
-  - Identify the types of retention tags that can be applied to Exchange mailboxes
-  - Create a retention policy in the SCC
-  - Manage existing retention policies in the SCC
+  - Explain how a retention policies and retention labels work.
+  - Identify the capabilities of both retention policies and retention labels.
+  - Select the appropriate scope for a policy depending on business requirements.
+  - Explain the principles of retention.
+  - Identify the differences between retention settings and eDiscovery holds.
+  - Restrict retention changes by using preservation lock.
 prerequisites: |
   None
 iconUrl: /learn/achievements/explore-retention-in-microsoft-365.svg
@@ -29,21 +29,23 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
+- cloud-computing
+- cloud-security
 - compliance
 - information-protection-governance
+- productivity
 units:
 - learn.wwl.explore-retention-microsoft-365.introduction
-- learn.wwl.explore-retention-microsoft-365.manage-retention-by-using-retention-policies
-- learn.wwl.explore-retention-microsoft-365.examine-messaging-records-management-exchange
-- learn.wwl.explore-retention-microsoft-365.apply-retention-tags-exchange
-- learn.wwl.explore-retention-microsoft-365.policies-security-compliance-center
-- learn.wwl.explore-retention-microsoft-365.create-retention-policy
-- learn.wwl.explore-retention-microsoft-365.manage-retention-policy
+- learn.wwl.explore-retention-microsoft-365.explore-retention-policies-retention-labels
+- learn.wwl.explore-retention-microsoft-365.compare-capabilities-retention-policies-retention-labels
+- learn.wwl.explore-retention-microsoft-365.define-scope-retention-policy
+- learn.wwl.explore-retention-microsoft-365.examine-principles-retention
+- learn.wwl.explore-retention-microsoft-365.restrict-retention-changes-using-preservation-lock
 - learn.wwl.explore-retention-microsoft-365.knowledge-check
 - learn.wwl.explore-retention-microsoft-365.summary
+- learn.wwl.explore-retention-microsoft-365.implement-retention-using-policies-labels-ediscovery-holds
 badge:
   uid: learn.wwl.explore-retention-microsoft-365.badge
