--- a/learn-m365-pr/wwl/examine-governance-compliance-solutions-microsoft-purview/4-govern-organizational-data-using-microsoft-purview.yml
+++ b/learn-m365-pr/wwl/examine-governance-compliance-solutions-microsoft-purview/4-govern-organizational-data-using-microsoft-purview.yml
@@ -4,7 +4,7 @@ title: Govern organizational data using Microsoft Purview Data Lifecycle Managem
 metadata:
   title: Govern organizational data using Microsoft Purview Data Lifecycle Management
   description: "Govern organizational data using Microsoft Purview Data Lifecycle Management"
-  ms.date: 05/31/2022
+  ms.date: 06/01/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -17,7 +17,7 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
-  - content: "Fabrikam is ready to start governing its data by retaining the content that it must keep and deleting the content that it doesn't. As part of this project, it's following guidance from Microsoft Purview Data Lifecycle Management. Fabrikam has determined that it must support archive mailboxes. What should it do for mailboxes that need more than 100-GB of storage?"
+  - content: "Fabrikam is ready to start governing its data by retaining the content that it must keep and deleting the content that it doesn't. As part of this project, it's following guidance from Microsoft Purview Data Lifecycle Management. Fabrikam has determined that it must support archive mailboxes. What should it do for mailboxes that need more than 100 GB of storage?"
     choices:
     - content: "Use retention labels with records management rather than data lifecycle management"
       isCorrect: false
@@ -27,4 +27,4 @@ quiz:
       explanation: "Incorrect. This item should be implemented when you want to efficiently retain or delete data for Microsoft 365 services."
     - content: "Enable auto-expanding archiving"
       isCorrect: true
-      explanation: "Correct. When organizations must support archive mailboxes for mailboxes that need more than 100-GB of storage, they should enable auto-expanding archiving."
+      explanation: "Correct. When organizations must support archive mailboxes for mailboxes that need more than 100 GB of storage, they should enable auto-expanding archiving."
