--- a/learn-m365-pr/wwl/examine-governance-compliance-solutions-microsoft-purview/index.yml
+++ b/learn-m365-pr/wwl/examine-governance-compliance-solutions-microsoft-purview/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.examine-governance-compliance-solutions-microsoft-purview
 metadata:
   title: Examine governance and compliance solutions in Microsoft Purview
   description: "Examine governance and compliance solutions in Microsoft Purview"
-  ms.date: 05/31/2022
+  ms.date: 06/01/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -11,11 +11,11 @@ metadata:
 title: Examine governance and compliance solutions in Microsoft Purview
 summary: This module introduces Microsoft Purview, which is designed to meet the challenges of today’s decentralized, data-rich workplace by providing a comprehensive set of solutions that help organizations govern, protect, and manage their entire data estate.
 abstract: |
-  By the end of this module, you will be able to:
-  - Protect sensitive data with Microsoft Purview Information Protection.
-  - Govern organizational data using Microsoft Purview Data Lifecycle Management.
-  - Minimize internal risks with Microsoft Purview Insider Risk Management.
-  - Explain the Microsoft Purview eDiscovery solutions.
+  By the end of this module, you'll be able to:
+  *   Protect sensitive data with Microsoft Purview Information Protection.
+  *   Govern organizational data using Microsoft Purview Data Lifecycle Management.
+  *   Minimize internal risks with Microsoft Purview Insider Risk Management.
+  *   Explain the Microsoft Purview eDiscovery solutions.
 prerequisites: ""
 iconUrl: /learn/achievements/generic-badge.svg
 levels:
