--- a/learn-m365-pr/wwl/explore-archiving-microsoft-365/5-implement-records-management-microsoft-365.yml
+++ b/learn-m365-pr/wwl/explore-archiving-microsoft-365/5-implement-records-management-microsoft-365.yml
@@ -4,9 +4,11 @@ title: Implement records management in Microsoft 365
 metadata:
   title: Implement records management in Microsoft 365
   description: "Implement records management in Microsoft 365"
-  ms.date: 05/31/2022
+  ms.date: 06/01/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 4
