--- a/learn-m365-pr/wwl/explore-archiving-microsoft-365/7-restore-deleted-data-sharepoint-online.yml
+++ b/learn-m365-pr/wwl/explore-archiving-microsoft-365/7-restore-deleted-data-sharepoint-online.yml
@@ -4,9 +4,11 @@ title: Restore deleted data in SharePoint Online
 metadata:
   title: Restore deleted data in SharePoint Online
   description: "Restore deleted data in SharePoint Online"
-  ms.date: 05/31/2022
+  ms.date: 06/01/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 3
