--- a/learn-m365-pr/wwl/explore-archiving-microsoft-365/8-knowledge-check.yml
+++ b/learn-m365-pr/wwl/explore-archiving-microsoft-365/8-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 05/31/2022
+  ms.date: 06/01/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -17,7 +17,7 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
-  - content: "As the Enterprise Admin for Tailspin Toys, Allan Deyoung disabled a user's archive mailbox. If Allan wants to reconnect the archive mailbox to the user's primary mailbox, how many days does Allan have to reconnect it from the the date on which it was disabled?"
+  - content: "As the Enterprise Admin for Tailspin Toys, Allan Deyoung disabled a user's archive mailbox. If Allan wants to reconnect the archive mailbox to the user's primary mailbox, how many days does Allan have to reconnect it from the date on which it was disabled?"
     choices:
     - content: "30 days"
       isCorrect: true
@@ -33,7 +33,7 @@ quiz:
     - content: "The contents of the archive mailbox were soft-deleted and could be recovered"
       isCorrect: false
       explanation: "Incorrect. After 30 days of being disabled, the contents of the archive mailbox are permanently deleted and can't be recovered."
-    - content: "The original archive mailbox was able to be reconnected to the user's primary mailboxc"
+    - content: "The original archive mailbox was able to be reconnected to the user's primary mailbox"
       isCorrect: false
       explanation: "Incorrect. You can reconnect a disabled archive mailbox within 30 days of being disabled."
     - content: "A new archive mailbox was created"
