--- a/learn-m365-pr/wwl/explore-retention-microsoft-365/index.yml
+++ b/learn-m365-pr/wwl/explore-retention-microsoft-365/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.explore-retention-microsoft-365
 metadata:
   title: Explore retention in Microsoft 365
   description: "Explore retention in Microsoft 365"
-  ms.date: 05/31/2022
+  ms.date: 06/01/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -11,13 +11,13 @@ metadata:
 title: Explore retention in Microsoft 365
 summary: This module examines how data can be retained and ultimately removed in Microsoft 365 by using data retention policies and data retention labels in retention policies.
 abstract: |
-  By the end of this module, you will be able to:
-  - Explain how a retention policies and retention labels work.
-  - Identify the capabilities of both retention policies and retention labels.
-  - Select the appropriate scope for a policy depending on business requirements.
-  - Explain the principles of retention.
-  - Identify the differences between retention settings and eDiscovery holds.
-  - Restrict retention changes by using preservation lock.
+  By the end of this module, you'll be able to:
+  *   Explain how a retention policies and retention labels work.
+  *   Identify the capabilities of both retention policies and retention labels.
+  *   Select the appropriate scope for a policy depending on business requirements.
+  *   Explain the principles of retention.
+  *   Identify the differences between retention settings and eDiscovery holds.
+  *   Restrict retention changes by using preservation lock.
 prerequisites: |
   None
 iconUrl: /learn/achievements/explore-retention-in-microsoft-365.svg
