--- a/learn-m365-pr/wwl/explore-microsoft-purview-message-encryption/5-add-organizational-branding-encrypted-email-messages.yml
+++ b/learn-m365-pr/wwl/explore-microsoft-purview-message-encryption/5-add-organizational-branding-encrypted-email-messages.yml
@@ -4,9 +4,11 @@ title: Add organizational branding to encrypted email messages
 metadata:
   title: Add organizational branding to encrypted email messages
   description: "Add organizational branding to encrypted email messages"
-  ms.date: 05/31/2022
+  ms.date: 06/01/2022
   author: wwlpublish
+  ms.author: tfrink
   ms.topic: interactive-tutorial
+  ms.prod: learning-m365
 azureSandbox: false
 labModal: false
 durationInMinutes: 3
