changed files by pdets auto publish service, publishid[7de9c144-56a6-4b1b-8c8f-cbf0d57cc472] and do [publish].

--- a/learn-m365-pr/wwl/explore-connection-security-rules/index.yml
+++ b/learn-m365-pr/wwl/explore-connection-security-rules/index.yml
@@ -2,7 +2,7 @@
 uid: learn.wwl.explore-connection-security-rules
 metadata:
   title: Explore connection security rules
-  description: "This module describes how connection security rules can be used to provide addtional security to protect data transmitted across networks."
+  description: "This module describes how connection security rules can be used to provide additional security to protect data transmitted across networks."
   ms.date: 06/01/2022
   author: wwlpublish
   ms.author: brhinkel
