changed files by pdets auto publish service, publishid[c7409550-f1b5-4c18-a6c6-24c4ae6ab392] and do [publish].

--- a/learn-m365-pr/wwl/examine-governance-compliance-solutions-microsoft-purview/index.yml
+++ b/learn-m365-pr/wwl/examine-governance-compliance-solutions-microsoft-purview/index.yml
@@ -16,7 +16,8 @@ abstract: |
   *   Govern organizational data using Microsoft Purview Data Lifecycle Management.
   *   Minimize internal risks with Microsoft Purview Insider Risk Management.
   *   Explain the Microsoft Purview eDiscovery solutions.
-prerequisites: ""
+prerequisites: |
+  None
 iconUrl: /learn/achievements/generic-badge.svg
 levels:
 - intermediate
