--- a/learn-m365-pr/wwl/plan-your-identity-authentication-solution-for-microsoft-365/4-evaluate-multifactor-authentication.yml
+++ b/learn-m365-pr/wwl/plan-your-identity-authentication-solution-for-microsoft-365/4-evaluate-multifactor-authentication.yml
@@ -1,10 +1,10 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.plan-your-identity-authentication-solution-for-microsoft-365.evaluate-multifactor-authentication-for-your-deployment
-title: Evaluate multifactor authentication for your Microsoft 365 deployment
+title: Evaluate multi-factor authentication for your Microsoft 365 deployment
 metadata:
-  title: Evaluate multifactor authentication for your Microsoft 365 deployment
-  description: "Evaluate multifactor authentication for your Microsoft 365 deployment"
-  ms.date: 04/05/2022
+  title: Evaluate multi-factor authentication for your Microsoft 365 deployment
+  description: "Evaluate multi-factor authentication for your Microsoft 365 deployment"
+  ms.date: 06/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
