--- a/learn-m365-pr/wwl/plan-your-identity-authentication-solution-for-microsoft-365/8-explore-pass-through-authentication.yml
+++ b/learn-m365-pr/wwl/plan-your-identity-authentication-solution-for-microsoft-365/8-explore-pass-through-authentication.yml
@@ -1,10 +1,10 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.plan-your-identity-authentication-solution-for-microsoft-365.implement-azure-ad-connect-pass-through-authentication
-title: Explore cloud authentication using Azure AD Connect pass-through authentication
+title: Explore cloud authentication using Azure AD pass-through authentication
 metadata:
-  title: Explore cloud authentication using Azure AD Connect pass-through authentication
-  description: "Explore cloud authentication using Azure AD Connect pass-through authentication"
-  ms.date: 04/05/2022
+  title: Explore cloud authentication using Azure AD pass-through authentication
+  description: "Explore cloud authentication using Azure AD pass-through authentication"
+  ms.date: 06/02/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -13,7 +13,7 @@ azureSandbox: false
 labModal: false
 durationInMinutes: 5
 content: |
-  [!include[](includes/9-explore-pass-through-authentication.md)]
+  [!include[](includes/8-explore-pass-through-authentication.md)]
 quiz:
   title: "Check your knowledge"
   questions:
