--- a/learn-m365-pr/paths/introduction-to-data-governance-microsoft-365/index.yml
+++ b/learn-m365-pr/paths/introduction-to-data-governance-microsoft-365/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.introduction-to-data-governance-microsoft-365
 metadata:
-  title: Explore data governance in Microsoft 365
-  description: Explore data governance in Microsoft 365
-  ms.date: 06/10/2021
+  title: Explore data governance and compliance in Microsoft 365
+  description: Explore data governance and compliance in Microsoft 365
+  ms.date: 06/06/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Explore data governance in Microsoft 365
+title: Explore data governance and compliance in Microsoft 365
 prerequisites: |
   - Students should have completed a role-based administrator collection such as Messaging, Teamwork, Security and Compliance, or Collaboration.
   - Students should have a proficient understanding of DNS and basic functional experience with Microsoft 365 services.
@@ -24,17 +24,14 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
 - information-protection-governance
 modules:
+- learn.wwl.examine-governance-compliance-solutions-microsoft-purview
 - learn.wwl.explore-archiving-microsoft-365
 - learn.wwl.explore-retention-microsoft-365
-- learn.wwl.explore-information-rights-management
-- learn.wwl.explore-office-365-message-encryption
-- learn.wwl.explore-place-records-management-sharepoint
-- learn.wwl.explore-data-loss-prevention-microsoft-365
+- learn.wwl.explore-microsoft-purview-message-encryption
 trophy:
   uid: learn.wwl.introduction-to-data-governance-microsoft-365.trophy
