Adding new achievement pages

--- a/learn-m365-pr/achievements/learn-m365.compmgmt.trophy.yml
+++ b/learn-m365-pr/achievements/learn-m365.compmgmt.trophy.yml
@@ -2,6 +2,6 @@
 achievementUid: learn-m365.compmgmt.trophy
 metadata:
   title: >-
-    Microsoft Trophy: Reduce risk with Microsoft Compliance Manager was issued
-    by Microsoft
+    Microsoft Trophy: Reduce risk with Microsoft Purview Compliance Manager was
+    issued by Microsoft
 socialImageUrl: /learn/achievements/reduce-risk-with-microsoft-compliance-manager-social.png
