--- a/learn-m365-pr/achievements/learn.wwl.manage-your-microsoft-365-security-services.trophy.yml
+++ b/learn-m365-pr/achievements/learn.wwl.manage-your-microsoft-365-security-services.trophy.yml
@@ -2,6 +2,6 @@
 achievementUid: learn.wwl.manage-your-microsoft-365-security-services.trophy
 metadata:
   title: >-
-    Microsoft Trophy: Manage your Microsoft 365 security services was issued by
-    Microsoft
+    Microsoft Trophy: Manage your security services in Microsoft 365 Defender
+    was issued by Microsoft
 socialImageUrl: /learn/achievements/m365-manage-security-services-social.png
