--- a/learn-m365-pr/achievements/learn.wwl.search-for-content-security-compliance-center.badge.yml
+++ b/learn-m365-pr/achievements/learn.wwl.search-for-content-security-compliance-center.badge.yml
@@ -2,6 +2,6 @@
 achievementUid: learn.wwl.search-for-content-security-compliance-center.badge
 metadata:
   title: >-
-    Microsoft Badge: Search for content in the Microsoft 365 compliance center
-    was issued by Microsoft
+    Microsoft Badge: Search for content in the Microsoft Purview compliance
+    portal was issued by Microsoft
 socialImageUrl: /learn/achievements/m365-content-compliance-social.png
