--- a/learn-m365-pr/achievements/learn.wwl.explore-archiving-microsoft-365.badge.yml
+++ b/learn-m365-pr/achievements/learn.wwl.explore-archiving-microsoft-365.badge.yml
@@ -1,5 +1,7 @@
 ### YamlMime:AchievementDetail
 achievementUid: learn.wwl.explore-archiving-microsoft-365.badge
 metadata:
-  title: 'Microsoft Badge: Explore archiving in Microsoft 365 was issued by Microsoft'
+  title: >-
+    Microsoft Badge: Explore archiving and records management in Microsoft 365
+    was issued by Microsoft
 socialImageUrl: /learn/achievements/explore-archiving-in-microsoft-365-social.png
