--- a/learn-m365-pr/achievements/learn.wwl.implement-microsoft-365-threat-intelligence.trophy.yml
+++ b/learn-m365-pr/achievements/learn.wwl.implement-microsoft-365-threat-intelligence.trophy.yml
@@ -2,6 +2,6 @@
 achievementUid: learn.wwl.implement-microsoft-365-threat-intelligence.trophy
 metadata:
   title: >-
-    Microsoft Trophy: Implement threat intelligence in Microsoft 365 was issued
-    by Microsoft
+    Microsoft Trophy: Implement threat protection by using Microsoft 365
+    Defender was issued by Microsoft
 socialImageUrl: /learn/achievements/m365-threat-intelligence-social.png
