--- a/learn-m365-pr/achievements/learn.wwl.introduction-to-data-governance-microsoft-365.trophy.yml
+++ b/learn-m365-pr/achievements/learn.wwl.introduction-to-data-governance-microsoft-365.trophy.yml
@@ -2,7 +2,7 @@
 achievementUid: learn.wwl.introduction-to-data-governance-microsoft-365.trophy
 metadata:
   title: >-
-    Microsoft Trophy: Explore data governance in Microsoft 365 was issued by
-    Microsoft
+    Microsoft Trophy: Explore data governance and compliance in Microsoft 365
+    was issued by Microsoft
 socialImageUrl: >-
   /learn/achievements/introduction-to-data-governance-in-microsoft-365-social.png
